Polish Saml2 Jackson Support
Issue gh-10905